--- a/Frontend/my-app/src/Components/Form/ChangePassword.css
+++ b/Frontend/my-app/src/Components/Form/ChangePassword.css
@@ -4,7 +4,13 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    overflow-y: scroll;
     background-color: #fff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000; /* Ensure it's above the overlay */
   }
   
   .change-password-form label {
@@ -43,5 +49,15 @@
     border-radius: 5px;
     padding: 5px;
     cursor: pointer;
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Dimmed background */
+    z-index: 999; /* Ensure it's above other content */
   }
   
