--- a/Frontend/my-app/src/Components/Form/ConsentForm.css
+++ b/Frontend/my-app/src/Components/Form/ConsentForm.css
@@ -4,13 +4,18 @@
     justify-content: space-between;
     align-items: center;
     height: 550px;
-    max-width: 400px;
+    max-width: 600px;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     overflow-y: scroll;
     background-color: #fff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000; /* Ensure it's above the overlay */
   }
   
 .consent-text-container {
@@ -47,10 +52,32 @@
     border-radius: 5px;
     padding: 5px;
     cursor: pointer;
+    margin-bottom: 10px;
   }
 
   .form-header {
     text-align: center;
     margin-bottom: 20px;
     font-size: 1.5rem;
+   
+  }
+
+  .checkbox-label {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  .checkbox-text {
+    margin-left: 10px;
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Dimmed background */
+    z-index: 999; /* Ensure it's above other content */
   }
