--- a/Frontend/my-app/src/Components/Form/ImageForm.css
+++ b/Frontend/my-app/src/Components/Form/ImageForm.css
@@ -13,8 +13,8 @@
   }
   
   .image-preview1 {
-    min-width: auto;
-    min-height:auto;
+    min-width: 500px;
+    min-height: 500px;
     height: 500px;
     margin: 0 auto 20px;
     border: 1px solid #ccc;
@@ -32,8 +32,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 200px;
     background-color: #f0f0f0;
   }
   
@@ -83,6 +83,13 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    overflow-y: scroll;
+    background-color: #fff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000; /* Ensure it's above the overlay */
   }
   
   .btn1{
@@ -145,4 +152,14 @@
 
 .download-button:hover {
     background-color: #0056b3;
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Dimmed background */
+    z-index: 999; /* Ensure it's above other content */
   }
