--- a/Frontend/my-app/src/Components/Form/UploadImage.css
+++ b/Frontend/my-app/src/Components/Form/UploadImage.css
@@ -50,6 +50,17 @@
     cursor: pointer;
     transition: background-color 0.3s;
   }
+
+  .sendOTPButton {
+    display: inline-block;
+    padding: 5px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
   
   .upload-button:hover {
     background-color: #0056b3;
@@ -82,6 +93,13 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    overflow-y: scroll;
+    background-color: #fff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000; /* Ensure it's above the overlay */
   }
   
   .btn1{
@@ -134,4 +152,14 @@
   width: 100%;
   padding: 10px;
   text-align: center;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Dimmed background */
+  z-index: 999; /* Ensure it's above other content */
 }
