--- a/Frontend/my-app/src/Components/Report/DoctorReport.css
+++ b/Frontend/my-app/src/Components/Report/DoctorReport.css
@@ -67,6 +67,12 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    overflow-y: scroll;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000; /* Ensure it's above the overlay */
   }
 
   .container-report{
@@ -78,4 +84,14 @@
     border-radius: 5px;
     height: 500px;
     overflow-y: scroll;
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Dimmed background */
+    z-index: 999; /* Ensure it's above other content */
   }
